syntax = "proto3";
package execution;
option go_package = "github.com/cube2222/octosql/execution";

message StreamID {
    string id = 1;
}
