syntax = "proto3";
package csv;
option go_package = "github.com/cube2222/octosql/storage/csv";
import "execution/record.proto";

message QueueElement {
    oneof type {
        execution.Record record = 1;
        bool endOfStream = 2;
        string error = 3;
    }
}